Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -166,8 +166,7 @@ ENDCLASS.
 ```abap
 REPORT ZBC401_03_MAIN.
 
-TYPE-POOLS icon.
-
+*************** 클래스 정의 ****************
 CLASS lcl_airplane DEFINITION.
   PUBLIC SECTION.
     METHODS: display_attributes,
@@ -185,7 +184,10 @@ CLASS lcl_airplane DEFINITION.
     CLASS-DATA: gv_n_o_airplanes TYPE I.
 ENDCLASS.
 
+*************** 클래스 구현 ****************
 CLASS lcl_airplane IMPLEMENTATION.
+
+*************** 생성자 ****************
   METHOD constructor.
     DATA: gs_data TYPE saplane.
 
@@ -218,6 +220,130 @@ CLASS lcl_airplane IMPLEMENTATION.
 
   METHOD get_n_o_airpalnes.
     rv_result = gv_n_o_airplanes.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** 실행부 ****************
+START-OF-SELECTION.
+  DATA: go_airplane TYPE REF TO lcl_airplane,
+        gt_airplane TYPE TABLE OF REF TO lcl_airplane,
+        gv_cnt TYPE I.
+
+  lcl_airplane=>display_gv_n_o_airplanes( ).
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름1'
+                                      iv_planetype = '747-00'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름2'
+                                      iv_planetype = '146-200'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  CREATE OBJECT go_airplane EXPORTING iv_name = '이름3'
+                                      iv_planetype = '777-300'
+                            EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    APPEND go_airplane TO gt_airplane.
+  ENDIF.
+
+  gt_airplane[ 1 ]->display_gv_n_o_airplanes( ).
+
+  LOOP AT gt_airplane INTO go_airplane.
+    go_airplane->display_attributes( ).
+  ENDLOOP.
+  lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
+  WRITE:/ 'Number of airplane: ', gv_cnt.
+```
+</br>
+
+- 결과 확인
+<img width="339" height="262" alt="image" src="https://github.com/user-attachments/assets/8bceb2db-a542-446b-9e81-823f5b7ecf35" />
+</br>
+</br>
+</br>
+
+### 실습 2
+- 실습 1에 이어서 진행
+- Class constructor 실습
+```abap
+REPORT ZBC401_03_MAIN.
+
+CLASS lcl_airplane DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS: class_constructor.
+  PRIVATE SECTION.
+    TYPES: TY_PLANETYPES TYPE STANDARD TABLE OF saplane
+      WITH NON-UNIQUE KEY planetype.
+    CLASS-DATA: GT_PLANETYPES TYPE TY_PLANETYPES.
+    CLASS-METHODS: get_technical_attributes
+                      IMPORTING iv_planetype TYPE saplane-planetype
+                      EXPORTING iv_weight TYPE saplane-weight
+                                iv_tankcap TYPE saplane-tankcap
+                      EXCEPTIONS wrong_planetype.
+ENDCLASS.
+
+CLASS lcl_airplane IMPLEMENTATION.
+  METHOD class_constructor.
+    SELECT * FROM saplane
+      INTO TABLE GT_PLANETYPES.
+  ENDMETHOD.
+
+  METHOD constructor.
+    DATA: gs_data TYPE saplane.
+
+    mv_name = iv_name.
+    mv_planetype = iv_planetype.
+
+*    SELECT SINGLE * FROM saplane
+*      INTO gs_data
+*      WHERE planetype = mv_planetype.
+    get_technical_attributes(
+      EXPORTING iv_planetype = mv_planetype
+      IMPORTING iv_weight = mv_weight
+                iv_tankcap = mv_tankcap
+      EXCEPTIONS wrong_planetype = 1
+    ).
+    IF sy-subrc <> 0.
+      RAISE wrong_planetype.
+    ELSE.
+*      mv_weight = gs_data-weight.
+*      mv_tankcap = gs_data-tankcap.
+      gv_n_o_airplanes = gv_n_o_airplanes + 1.
+    ENDIF.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    WRITE:/ icon_ws_plane AS ICON,
+          / 'Name: ', AT c_pos_l mv_name,
+          / 'Planetype: ', AT c_pos_l mv_planetype,
+          / 'Weight: ', AT c_pos_l mv_weight,
+          / 'Tankcap', AT c_pos_l mv_tankcap.
+  ENDMETHOD.
+
+  METHOD display_gv_n_o_airplanes.
+    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_n_o_airpalnes.
+    rv_result = gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_technical_attributes.
+    DATA: gs_data TYPE saplane.
+    READ TABLE gt_planetypes INTO gs_data
+      WITH TABLE KEY planetype = iv_planetype
+      TRANSPORTING weight tankcap.
+    IF sy-subrc = 0.
+      iv_weight = gs_data-weight.
+      iv_tankcap = gs_data-tankcap.
+    ELSE.
+      RAISE wrong_planetype.
+    ENDIF.
   ENDMETHOD.
 ENDCLASS.
 
@@ -257,6 +383,5 @@ START-OF-SELECTION.
   WRITE:/ 'Number of airplane: ', gv_cnt.
 ```
 </br>
-
 - 결과 확인
 <img width="339" height="262" alt="image" src="https://github.com/user-attachments/assets/8bceb2db-a542-446b-9e81-823f5b7ecf35" />
