Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -274,6 +274,7 @@ START-OF-SELECTION.
 ```abap
 REPORT ZBC401_03_MAIN.
 
+*************** 클래스 정의 ****************
 CLASS lcl_airplane DEFINITION.
   PUBLIC SECTION.
     CLASS-METHODS: class_constructor.
@@ -288,7 +289,10 @@ CLASS lcl_airplane DEFINITION.
                       EXCEPTIONS wrong_planetype.
 ENDCLASS.
 
+*************** 클래스 구현 ****************
 CLASS lcl_airplane IMPLEMENTATION.
+
+*************** 정적 생성자 ****************
   METHOD class_constructor.
     SELECT * FROM saplane
       INTO TABLE GT_PLANETYPES.
@@ -300,9 +304,6 @@ CLASS lcl_airplane IMPLEMENTATION.
     mv_name = iv_name.
     mv_planetype = iv_planetype.
 
-*    SELECT SINGLE * FROM saplane
-*      INTO gs_data
-*      WHERE planetype = mv_planetype.
     get_technical_attributes(
       EXPORTING iv_planetype = mv_planetype
       IMPORTING iv_weight = mv_weight
@@ -312,28 +313,11 @@ CLASS lcl_airplane IMPLEMENTATION.
     IF sy-subrc <> 0.
       RAISE wrong_planetype.
     ELSE.
-*      mv_weight = gs_data-weight.
-*      mv_tankcap = gs_data-tankcap.
       gv_n_o_airplanes = gv_n_o_airplanes + 1.
     ENDIF.
   ENDMETHOD.
 
-  METHOD display_attributes.
-    WRITE:/ icon_ws_plane AS ICON,
-          / 'Name: ', AT c_pos_l mv_name,
-          / 'Planetype: ', AT c_pos_l mv_planetype,
-          / 'Weight: ', AT c_pos_l mv_weight,
-          / 'Tankcap', AT c_pos_l mv_tankcap.
-  ENDMETHOD.
-
-  METHOD display_gv_n_o_airplanes.
-    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
-  ENDMETHOD.
-
-  METHOD get_n_o_airpalnes.
-    rv_result = gv_n_o_airplanes.
-  ENDMETHOD.
-
+*************** 정적 메서드 (기술 속성 조회) ****************
   METHOD get_technical_attributes.
     DATA: gs_data TYPE saplane.
     READ TABLE gt_planetypes INTO gs_data
@@ -348,6 +332,7 @@ CLASS lcl_airplane IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 
+*************** 실행부 ****************
 START-OF-SELECTION.
   DATA: go_airplane TYPE REF TO lcl_airplane,
         gt_airplane TYPE TABLE OF REF TO lcl_airplane,
@@ -384,5 +369,6 @@ START-OF-SELECTION.
   WRITE:/ 'Number of airplane: ', gv_cnt.
 ```
 </br>
+
 - 결과 확인
 <img width="339" height="262" alt="image" src="https://github.com/user-attachments/assets/8bceb2db-a542-446b-9e81-823f5b7ecf35" />
