Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -151,7 +151,40 @@ CLASS <class> IMPLEMENTATION.
 
 ENDCLASS.
 ```
+</br>
+</br>
 
+---
+
+</br>
+
+## < Inheritance (상속) >
+</br>
+
+### 1) 클래스 상속(Inheritance) 기본 구조
+- `INHERITING FROM` 을 사용해 부모 클래스의 속성과 메서드를 물려받음
+- 자식 클래스는 부모의 PUBLIC / PROTECTED 멤버 사용 가능
+- PRIVATE 멤버는 상속되지 않음
+```abap
+*************** 부모 클래스 ****************
+CLASS <parent_class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <parent_method>
+      IMPORTING <p1> TYPE <type>.
+  PRIVATE SECTION.
+    DATA <parent_attr> TYPE <type>.
+ENDCLASS.
+
+*************** 자식 클래스 ****************
+CLASS <child_class> DEFINITION
+  INHERITING FROM <parent_class>.
+  PUBLIC SECTION.
+    METHODS <child_method>
+      RETURNING VALUE(<rv>) TYPE <type>.
+  PRIVATE SECTION.
+    DATA <child_attr> TYPE <type>.
+ENDCLASS.
+```
 </br>
 </br>
 
