--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="1068" height="712" alt="image" src="https://github.com/user-attachments/assets/884d07dd-e26b-42bc-8a4b-7fb733172810" />## <  핵심 개념 >
 - **1) `PUBLIC SECTION`**
 - **2) `PRIVATE SECTION`**
 </br>
@@ -183,6 +183,29 @@ CLASS <child_class> DEFINITION
       RETURNING VALUE(<rv>) TYPE <type>.
   PRIVATE SECTION.
     DATA <child_attr> TYPE <type>.
+ENDCLASS.
+```
+</br>
+</br>
+
+### 2) 메서드 재정의(Redefinition)
+- 자식 클래스에서 부모 클래스의 메서드를 다시 구현하는 것을 재정의라 함
+- `REDEFINITION` 키워드를 사용하며 메서드 시그니처는 동일해야 함
+- `super->` 로 부모 메서드를 호출할 수 있음
+```abap
+*************** 자식 클래스 ****************
+CLASS <child_class> DEFINITION
+  INHERITING FROM <parent_class>.
+  PUBLIC SECTION.
+    METHODS <method> REDEFINITION.
+ENDCLASS.
+
+*************** 자식 클래스 구현 ****************
+CLASS <child_class> IMPLEMENTATION.
+  METHOD <method>.
+    super-><method>( ).   " 부모 메서드 호출
+    " 자식 클래스용 로직
+  ENDMETHOD.
 ENDCLASS.
 ```
 </br>
