Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -211,6 +211,67 @@ ENDCLASS.
 </br>
 </br>
 
+### 3) 서브클래스 생성자 정의(Constructor in Subclass)
+- 자식 클래스도 자신만의 constructor 정의 가능
+- 자식 생성자에서 `super->constructor` 로 부모 생성자 호출
+- 생성자는 시그니처 변경 가능 (일반 메서드와 다름)
+```abap
+*************** 부모 클래스 ****************
+CLASS <parent_class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS constructor
+      IMPORTING <p_parent> TYPE <type>.
+ENDCLASS.
+
+CLASS <parent_class> IMPLEMENTATION.
+  METHOD constructor.
+    <parent_attr> = <p_parent>.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** 자식 클래스 ****************
+CLASS <child_class> DEFINITION
+  INHERITING FROM <parent_class>.
+  PUBLIC SECTION.
+    METHODS constructor
+      IMPORTING
+        <p_child1> TYPE <type>
+        <p_child2> TYPE <type>.
+  PRIVATE SECTION.
+    DATA <child_attr> TYPE <type>.
+ENDCLASS.
+
+*************** 자식 클래스 구현 ****************
+CLASS <child_class> IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor( <p_parent> = <p_child1> ).
+    <child_attr> = <p_child2>.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+</br>
+
+### 4) 상속과 접근제어(Visibility)
+- `PUBLIC` : 어디서든 접근 가능
+- `PROTECTED` : 해당 클래스 + 모든 자식 클래스에서 접근 가능
+- `PRIVATE` : 해당 클래스 내부에서만 접근 가능
+```abap
+*************** 클래스 정의 ****************
+CLASS <class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <public_method>.
+
+  PROTECTED SECTION.
+    CONSTANTS <protected_const> TYPE <type> VALUE <val>.
+
+  PRIVATE SECTION.
+    DATA <private_attr> TYPE <type>.
+ENDCLASS.
+```
+</br>
+</br>
+
 ---
 
 </br>
