Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -185,6 +185,67 @@ CLASS <child_class> DEFINITION
     DATA <child_attr> TYPE <type>.
 ENDCLASS.
 ```
+```abap
+REPORT ZPROGB03_0037.
+
+CLASS lcl_grandparent DEFINITION.
+  PUBLIC SECTION.
+  DATA: mv_kimchi TYPE string.
+  METHODS: constructor IMPORTING iv_kimchi TYPE string.
+ENDCLASS.
+
+CLASS lcl_grandparent IMPLEMENTATION.
+  METHOD constructor.
+    mv_kimchi = iv_kimchi.
+    WRITE:/ '김치 투하: ', mv_kimchi.
+   ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_parent DEFINITION INHERITING FROM lcl_grandparent.
+  PUBLIC SECTION.
+    DATA: mv_meat TYPE string.
+    METHODS: constructor IMPORTING iv_kimchi TYPE string
+                                   iv_meat TYPE string.
+ENDCLASS.
+
+CLASS lcl_parent IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor( EXPORTING iv_kimchi = iv_kimchi ).
+    mv_meat = iv_meat.
+    WRITE:/ '엄마의 엄선된 고기 추가: ', mv_meat.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_child DEFINITION INHERITING FROM lcl_parent.
+  PUBLIC SECTION.
+    DATA: mv_topping TYPE string.
+    METHODS: constructor IMPORTING iv_kimchi TYPE string
+                                   iv_meat TYPE string
+                                   iv_topping TYPE string.
+ENDCLASS.
+
+CLASS lcl_child IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor(
+      iv_kimchi = iv_kimchi
+      iv_meat = iv_meat
+    ).
+    mv_topping = iv_topping.
+    WRITE:/ '나만의 토핑으로 마무리: ', mv_topping.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+START-OF-SELECTION.
+  DATA: go_child TYPE REF TO lcl_child.
+
+  CREATE OBJECT go_child
+    EXPORTING iv_kimchi = '묵은지'
+              iv_meat = '흑돼지'
+              iv_topping = '치즈 듬뿍'.
+```
 </br>
 </br>
 
