--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -553,3 +553,188 @@ START-OF-SELECTION.
 </br>
 </br>
 </br>
+
+### 실습 3
+- 실습 2에 이어서 진행
+- Inheritance (상속) 실습
+```abap
+REPORT ZBC401_03_MAIN.
+TYPE-POOLS icon.
+
+CLASS lcl_airplane DEFINITION.
+  PUBLIC SECTION.
+    METHODS: display_attributes,
+             constructor IMPORTING iv_name TYPE string
+                                   iv_planetype TYPE saplane-planetype
+                         EXCEPTIONS wrong_planetype.
+    CLASS-METHODS: display_gv_n_o_airplanes,
+                   get_n_o_airpalnes RETURNING VALUE(rv_result) TYPE I,
+                   class_constructor.
+
+  PROTECTED SECTION.
+    CONSTANTS: c_pos_l TYPE I VALUE 30.
+
+  PRIVATE SECTION.
+    TYPES: TY_PLANETYPES TYPE STANDARD TABLE OF saplane
+      WITH NON-UNIQUE KEY planetype.
+
+    DATA: mv_name TYPE string,
+          mv_planetype TYPE saplane-planetype,
+          mv_weight TYPE saplane-weight,
+          mv_tankcap TYPE saplane-tankcap.
+    CLASS-DATA: gv_n_o_airplanes TYPE I,
+                GT_PLANETYPES TYPE TY_PLANETYPES.
+    CLASS-METHODS: get_technical_attributes
+                      IMPORTING iv_planetype TYPE saplane-planetype
+                      EXPORTING iv_weight TYPE saplane-weight
+                                iv_tankcap TYPE saplane-tankcap
+                      EXCEPTIONS wrong_planetype.
+ENDCLASS.
+
+CLASS lcl_airplane IMPLEMENTATION.
+  METHOD class_constructor.
+    SELECT * FROM saplane
+      INTO TABLE GT_PLANETYPES.
+  ENDMETHOD.
+
+  METHOD constructor.
+    DATA: gs_data TYPE saplane.
+
+    mv_name = iv_name.
+    mv_planetype = iv_planetype.
+
+    get_technical_attributes(
+      EXPORTING iv_planetype = mv_planetype
+      IMPORTING iv_weight = mv_weight
+                iv_tankcap = mv_tankcap
+      EXCEPTIONS wrong_planetype = 1
+    ).
+    IF sy-subrc <> 0.
+      RAISE wrong_planetype.
+    ELSE.
+      gv_n_o_airplanes = gv_n_o_airplanes + 1.
+    ENDIF.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    WRITE:/ icon_ws_plane AS ICON,
+          / 'Name: ', AT c_pos_l mv_name,
+          / 'Planetype: ', AT c_pos_l mv_planetype,
+          / 'Weight: ', AT c_pos_l mv_weight,
+          / 'Tankcap', AT c_pos_l mv_tankcap.
+  ENDMETHOD.
+
+  METHOD display_gv_n_o_airplanes.
+    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_n_o_airpalnes.
+    rv_result = gv_n_o_airplanes.
+  ENDMETHOD.
+
+  METHOD get_technical_attributes.
+    DATA: gs_data TYPE saplane.
+    READ TABLE gt_planetypes INTO gs_data
+      WITH TABLE KEY planetype = iv_planetype
+      TRANSPORTING weight tankcap.
+    IF sy-subrc = 0.
+      iv_weight = gs_data-weight.
+      iv_tankcap = gs_data-tankcap.
+    ELSE.
+      RAISE wrong_planetype.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_cargo_plane DEFINITION INHERITING FROM lcl_airplane.
+  PUBLIC SECTION.
+    METHODS: constructor IMPORTING iv_name TYPE string
+                                   iv_planetype TYPE saplane-planetype
+                                   iv_cargo TYPE scplane-cargomax
+                         EXCEPTIONS wrong_planetype,
+             display_attributes REDEFINITION.
+  PRIVATE SECTION.
+    DATA: mv_cargo TYPE scplane-cargomax.
+ENDCLASS.
+
+CLASS lcl_cargo_plane IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor(
+      EXPORTING iv_name = iv_name
+                iv_planetype = iv_planetype
+      EXCEPTIONS wrong_planetype = 1
+    ).
+    IF sy-subrc <> 0.
+      RAISE wrong_planetype.
+    ENDIF.
+    mv_cargo = iv_cargo.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    super->display_attributes( ).
+    WRITE:/ 'Cargo: ', AT c_pos_l mv_cargo.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_passenger_plane DEFINITION INHERITING FROM lcl_airplane.
+  PUBLIC SECTION.
+  METHODS: constructor IMPORTING iv_name TYPE string
+                                 iv_planetype TYPE saplane-planetype
+                                 iv_seats TYPE saplane-seatsmax
+                       EXCEPTIONS wrong_planetype,
+           display_attributes REDEFINITION.
+  PRIVATE SECTION.
+    DATA: mv_seats TYPE saplane-seatsmax.
+ENDCLASS.
+
+CLASS lcl_passenger_plane IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor(
+      EXPORTING iv_name = iv_name
+                iv_planetype = iv_planetype
+      EXCEPTIONS wrong_planetype = 1
+    ).
+    IF sy-subrc <> 0.
+      RAISE wrong_planetype.
+    ENDIF.
+    mv_seats = iv_seats.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    super->display_attributes( ).
+    WRITE:/ 'Seats: ', AT c_pos_l mv_seats.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+START-OF-SELECTION.
+  DATA: go_airplane TYPE REF TO lcl_airplane,
+        go_passenger TYPE REF TO lcl_passenger_plane,
+        go_cargo TYPE REF TO lcl_cargo_plane,
+        gt_airplane TYPE TABLE OF REF TO lcl_airplane,
+        gv_cnt TYPE I.
+
+  lcl_airplane=>display_gv_n_o_airplanes( ).
+  CREATE OBJECT go_passenger
+    EXPORTING iv_name = '이름1'
+              iv_planetype = '747-400'
+              iv_seats = 345
+    EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    go_passenger->display_attributes( ).
+  ENDIF.
+
+  CREATE OBJECT go_cargo
+    EXPORTING iv_name = '이름2'
+              iv_planetype = '146-200'
+              iv_cargo = 70000
+    EXCEPTIONS wrong_planetype = 1.
+  IF sy-subrc = 0.
+    go_cargo->display_attributes( ).
+  ENDIF.
+
+  lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
+  WRITE:/ 'Number of airplane: ', gv_cnt.
+```
