--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -738,3 +738,7 @@ START-OF-SELECTION.
   lcl_airplane=>get_n_o_airpalnes( RECEIVING rv_result = gv_cnt ).
   WRITE:/ 'Number of airplane: ', gv_cnt.
 ```
+</br>
+
+- 결과 확인
+<img width="350" height="266" alt="image" src="https://github.com/user-attachments/assets/1983d3f6-0a31-425e-8b80-7d293527d4fd" />
