Update 4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md

--- a/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
+++ b/ABAP 심화/4-2. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.14).md
@@ -1,11 +1,13 @@
 ## <  핵심 개념 >
-- **1) `PUBLIC SECTION`**
-- **2) `PRIVATE SECTION`**
-</br>
+- **1) Instance Constructor**
+- **2) Static Constructor**
+- **3) Self-Reference**
+- **4) 같은 클래스 내부에서 메서드 간 호출 방식**
+- **5) Inheritance (상속)**
+- **6) 메서드 재정의(Redefinition)**
+- **7) 서브클래스 생성자 정의(Constructor in Subclass)**
+- **8) 상속과 접근제어(PROTECTED)**
 
-- **`constructor` 는 `METHODS` 만 가능, `CLASS-METHODS` 에는 `class_constructor` 만 가능**
-- **같은 클래스 안에서는 인스턴스/정적 메서드 모두 이름만으로 호출 가능**
-- **`READ TABLE ... WITH KEY` 는 조건에 맞는 행 중 “한 건만” 읽음**
 </br>
 </br>
 
