Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -1,1 +1,57 @@
+## <  핵심 개념 >
+- **1) Upcast (Widening Cast)**
 
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 클래스 정의 기본 구조 >
+</br>
+
+### 1) Upcast (Widening Cast)
+- 자식 객체를 부모 타입 참조 변수에 담는 것
+- 객체는 그대로고, 접근 가능한 메서드만 부모 기준으로 제한됨
+```abap
+*************** 클래스 ****************
+CLASS <parent_class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <parent_method>.
+ENDCLASS.
+
+CLASS <child_class> DEFINITION
+  INHERITING FROM <parent_class>.
+  PUBLIC SECTION.
+    METHODS <child_method>.
+ENDCLASS.
+
+*************** 구현 ****************
+CLASS <parent_class> IMPLEMENTATION.
+  METHOD <parent_method>.
+  ENDMETHOD.
+ENDCLASS.
+
+CLASS <child_class> IMPLEMENTATION.
+  METHOD <child_method>.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** 객체 생성 및 업캐스트 ****************
+DATA: <parent_obj> TYPE REF TO <parent_class>,
+      <child_obj>  TYPE REF TO <child_class>.
+
+CREATE OBJECT <child_obj>.
+<parent_obj> = <child_obj>.   " Upcast
+
+*************** 사용 ****************
+<parent_obj>-><parent_method>( ).
+" ✔ parent 타입에 정의된 메서드라서 컴파일 통과
+" ✔ 실제 객체는 child → child에서 재정의된 메서드 실행
+
+<parent_obj>-><child_method>( ).
+" ✘ parent 타입에는 child_method가 없음
+" ✘ 컴파일 단계에서 호출 불가
+" ✘ 실행 단계까지 가지도 못함
+```
