Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -1,6 +1,9 @@
 ## <  핵심 개념 >
 - **1) Upcast (Widening Cast)**
+</br>
 
+- **Upcast에서 실제 객체 기준 실행은 메서드(재정의)에만 해당**
+- **변수는 무조건 참조 타입 기준으로만 접근 판단**
 </br>
 </br>
 
