Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -58,3 +58,92 @@ CREATE OBJECT <child_obj>.
 " ✘ 컴파일 단계에서 호출 불가
 " ✘ 실행 단계까지 가지도 못함
 ```
+```abap
+REPORT ZPROGB03_0037.
+
+CLASS lcl_grandparent DEFINITION.
+  PUBLIC SECTION.
+  DATA: pa_char(10) TYPE C VALUE 'Hello~~'.
+  METHODS: constructor IMPORTING iv_kimchi TYPE string,
+           cook. "요리하기 메서드 추가
+  PROTECTED SECTION. "할머니 김치는 가족(본인+자녀)만 공유하도록 함
+  DATA: mv_kimchi TYPE string.
+ENDCLASS.
+
+CLASS lcl_grandparent IMPLEMENTATION.
+  METHOD constructor.
+      mv_kimchi = iv_kimchi.
+  ENDMETHOD.
+
+  METHOD cook.
+    WRITE:/ '할머니 김치 투하: ', mv_kimchi.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_parent DEFINITION INHERITING FROM lcl_grandparent. "상속
+  PUBLIC SECTION.
+    METHODS: constructor IMPORTING iv_kimchi TYPE string
+                                   iv_meat TYPE string.
+    METHODS: cook REDEFINITION. "상위 클래스로부터 상속받은 메서드 재정의
+  PRIVATE SECTION.
+    DATA: mv_meat TYPE string.
+ENDCLASS.
+
+CLASS lcl_parent IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor( EXPORTING iv_kimchi = iv_kimchi ).
+    mv_meat = iv_meat.
+  ENDMETHOD.
+  METHOD cook.
+    super->cook( ).
+    WRITE:/ '엄마 단골가게 고기 추가: ', mv_meat.
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+CLASS lcl_child DEFINITION INHERITING FROM lcl_parent. "상속
+  PUBLIC SECTION.
+    METHODS: constructor IMPORTING iv_kimchi TYPE string
+                                   iv_meat TYPE string
+                                   iv_topping TYPE string.
+    METHODS: cook REDEFINITION. "상위 클래스로부터 상속받은 메서드 재정의
+  PRIVATE SECTION.
+    DATA: mv_topping TYPE string.
+ENDCLASS.
+
+CLASS lcl_child IMPLEMENTATION.
+  METHOD constructor.
+    super->constructor(
+      iv_kimchi = iv_kimchi
+      iv_meat   = iv_meat
+    ).
+    mv_topping = iv_topping.
+  ENDMETHOD.
+  METHOD cook.
+    super->cook( ).
+    WRITE:/ '나만의 토핑으로 마무리: ', mv_topping.
+*    SKIP.
+*    WRITE:/ mv_kimchi. 할머니 클래스의 protected 변수에 접근 가능
+  ENDMETHOD.
+ENDCLASS.
+
+**********************************************************************
+START-OF-SELECTION.
+  DATA: go_child1 TYPE REF TO lcl_child,
+        go_child2 TYPE REF TO lcl_child.
+  DATA: gt_super TYPE TABLE OF REF TO lcl_grandparent,
+        gs_super TYPE REF TO lcl_grandparent.
+
+  CREATE OBJECT go_child1
+         EXPORTING iv_kimchi = '3년된 묵은지'
+                   iv_meat = '흑돼지 앞다리살'
+                   iv_topping = '스팸/대파 듬뿍'.
+  APPEND go_child1 TO gt_super.
+
+  gs_super = go_child1. "upcast
+  gs_super->cook( ). "자식 클래스의 재정의된 메서드가 실행됨
+  SKIP 1.
+  "여전히 부모 클래스의 변수에 접근 가능
+  WRITE:/ '부모변수 PA_CHAR : ' && gs_super->pa_char.
+```
