Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -147,3 +147,78 @@ START-OF-SELECTION.
   "여전히 부모 클래스의 변수에 접근 가능
   WRITE:/ '부모변수 PA_CHAR : ' && gs_super->pa_char.
 ```
+</br>
+</br>
+
+### 2) Up-Cast 기반 다형성 (부모 참조를 이용한 공통 처리)
+- 자식 객체를 부모 타입 참조 변수에 담아 호출하는 구조 → Up-Cast
+- 호출은 부모 기준이지만, 실제 실행은 자식에서 재정의된 메서드가 수행됨(다형성)
+```abap
+*************** 부모 ****************
+CLASS <parent> DEFINITION.
+  PUBLIC SECTION.
+    METHODS display.
+ENDCLASS.
+
+*************** 자식 ****************
+CLASS <child> DEFINITION INHERITING FROM <parent>.
+  PUBLIC SECTION.
+    METHODS display REDEFINITION.
+ENDCLASS.
+
+*************** START-OF-SELECTION ****************
+DATA: <go_parent> TYPE REF TO <parent>,
+      <go_child>  TYPE REF TO <child>.
+
+START-OF-SELECTION.
+CREATE OBJECT <go_child>.
+<go_parent> = <go_child>.   " Upcast
+<go_parent>->display( ).    " 자식 메서드 실행
+```
+</br>
+</br>
+
+### 3) Down-Cast 기반 특정 객체 접근 (Narrowing Cast + 예외 처리)
+- 부모 참조 테이블에 여러 자식 객체가 섞여 있음
+- 반복문에서 하나씩 꺼내 Downcast 시도
+- 실제 객체가 해당 자식일 때만 캐스팅 성공
+- 성공 시 자식 전용 메서드/속성 접근
+- 실패 가능 → TRY–CATCH 필수
+```abap
+*************** 부모 ****************
+CLASS <parent> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <common_method>.
+ENDCLASS.
+
+*************** 자식 ****************
+CLASS <child> DEFINITION INHERITING FROM <parent>.
+  PUBLIC SECTION.
+    METHODS <child_method>.
+ENDCLASS.
+
+*************** 컨테이너 ****************
+CLASS <container> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <get_specific>.
+  PRIVATE SECTION.
+    DATA <mt_objs> TYPE TABLE OF REF TO <parent>.
+ENDCLASS.
+
+*************** 구현 ****************
+CLASS <container> IMPLEMENTATION.
+  METHOD <get_specific>.
+    DATA: <lo_parent> TYPE REF TO <parent>,
+          <lo_child>  TYPE REF TO <child>.
+
+    LOOP AT <mt_objs> INTO <lo_parent>.
+      TRY.
+          <lo_child> ?= <lo_parent>.        " Downcast
+          <lo_child>-><child_method>( ).    " 자식 전용 접근
+        CATCH cx_sy_move_cast_error.
+          " 자식 객체가 아니면 무시
+      ENDTRY.
+    ENDLOOP.
+  ENDMETHOD.
+ENDCLASS.
+```
