Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -175,6 +175,37 @@ CREATE OBJECT <go_child>.
 <go_parent> = <go_child>.   " Upcast
 <go_parent>->display( ).    " 자식 메서드 실행
 ```
+```abap
+REPORT  sapbc401_inh_s3.
+
+*************** 자식 객체 생성 ****************
+CREATE OBJECT go_passenger
+  EXPORTING
+    iv_name      = 'LH BERLIN'
+    iv_planetype = '747-400'
+    iv_seats     = 345.
+
+CREATE OBJECT go_cargo
+  EXPORTING
+    iv_name      = 'US Hercules'
+    iv_planetype = '747-200F'
+    iv_cargo     = 533.
+
+*************** Up-Cast (자식 → 부모 타입으로 저장) ****************
+METHOD add_airplane.
+  APPEND io_plane TO mt_airplanes.
+* io_plane TYPE REF TO lcl_airplane
+ENDMETHOD.
+
+*************** 부모 참조로 메서드 호출 (다형성) ****************
+METHOD display_airplanes.
+  DATA lo_plane TYPE REF TO lcl_airplane.
+
+  LOOP AT mt_airplanes INTO lo_plane.
+    lo_plane->display_attributes( ).
+  ENDLOOP.
+ENDMETHOD.
+```
 </br>
 </br>
 
@@ -221,4 +252,48 @@ CLASS <container> IMPLEMENTATION.
     ENDLOOP.
   ENDMETHOD.
 ENDCLASS.
+```
+```abap
+REPORT  sapbc401_inh_s3_opt.
+
+*************** 부모 클래스 ****************
+CLASS lcl_airplane DEFINITION.
+  PUBLIC SECTION.
+    METHODS display_attributes.
+ENDCLASS.
+
+*************** 자식 클래스 (Downcast 대상) ****************
+CLASS lcl_cargo_plane DEFINITION INHERITING FROM lcl_airplane.
+  PUBLIC SECTION.
+    METHODS get_cargo
+      RETURNING VALUE(rv_cargo) TYPE s_plan_car.
+  PRIVATE SECTION.
+    DATA mv_cargo TYPE s_plan_car.
+ENDCLASS.
+
+CLASS lcl_cargo_plane IMPLEMENTATION.
+  METHOD get_cargo.
+    rv_cargo = mv_cargo.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** Downcasting 발생 메서드 ****************
+METHOD get_max_cargo.
+  DATA:
+    lo_plane TYPE REF TO lcl_airplane,       " 부모 참조
+    lo_cargo TYPE REF TO lcl_cargo_plane.    " 자식 참조
+
+  LOOP AT mt_airplanes INTO lo_plane.
+    TRY.
+        lo_cargo ?= lo_plane.                " 🔴 Downcast 핵심
+
+        IF rv_max_cargo < lo_cargo->get_cargo( ).
+          rv_max_cargo = lo_cargo->get_cargo( ).
+        ENDIF.
+
+      CATCH cx_sy_move_cast_error.
+*       cargo plane 이 아니면 무시
+    ENDTRY.
+  ENDLOOP.
+ENDMETHOD.
 ```
