Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -297,3 +297,42 @@ METHOD get_max_cargo.
   ENDLOOP.
 ENDMETHOD.
 ```
+</br>
+</br>
+
+### 4) 인터페이스 + ALIAS로 접근 단순화
+- 인터페이스 메서드/속성은 원래 `인터페이스~컴포넌트` 형식으로 접근
+- ALIAS를 쓰면 클래스 안에서 짧은 이름으로 재정의 가능
+- 외부 호출 시 가독성↑, 인터페이스 구조는 그대로 유지
+```abap
+*************** 인터페이스 정의 ****************
+INTERFACE <if_partner>.
+  METHODS <display_partner>.
+  DATA <gv_partner_id> TYPE n LENGTH 10.
+ENDINTERFACE.
+
+*************** 클래스 정의 (ALIAS 포함) ****************
+CLASS <lcl_rental> DEFINITION.
+  PUBLIC SECTION.
+    INTERFACES <if_partner>.
+    ALIASES <display_partner1>
+      FOR <if_partner>~<display_partner>.
+
+  PRIVATE SECTION.
+    ALIASES <gv_partner>
+      FOR <if_partner>~<gv_partner_id>.
+ENDCLASS.
+
+*************** 클래스 구현 ****************
+CLASS <lcl_rental> IMPLEMENTATION.
+  METHOD <if_partner>~<display_partner>.
+    " 실제 로직
+  ENDMETHOD.
+ENDCLASS.
+
+*************** START-OF-SELECTION ****************
+DATA <go_rental> TYPE REF TO <lcl_rental>.
+
+CREATE OBJECT <go_rental>.
+<go_rental>-><display_partner1>( ).   " ALIAS로 간단 호출
+```
