Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -300,10 +300,12 @@ ENDMETHOD.
 </br>
 </br>
 
-### 4) 인터페이스 + ALIAS로 접근 단순화
+### 4) 인터페이스 + ALIAS + 인터페이스 업캐스트 다형성
 - 인터페이스 메서드/속성은 원래 `인터페이스~컴포넌트` 형식으로 접근
 - ALIAS를 쓰면 클래스 안에서 짧은 이름으로 재정의 가능
 - 외부 호출 시 가독성↑, 인터페이스 구조는 그대로 유지
+- 인터페이스 참조 변수로 객체를 받는 것 = 인터페이스 업캐스트
+- 업캐스트 시 인터페이스에 정의된 메서드/속성만 접근 가능
 ```abap
 *************** 인터페이스 정의 ****************
 INTERFACE <if_partner>.
@@ -311,7 +313,7 @@ INTERFACE <if_partner>.
   DATA <gv_partner_id> TYPE n LENGTH 10.
 ENDINTERFACE.
 
-*************** 클래스 정의 (ALIAS 포함) ****************
+*************** 클래스 정의 (인터페이스 + ALIAS) ****************
 CLASS <lcl_rental> DEFINITION.
   PUBLIC SECTION.
     INTERFACES <if_partner>.
@@ -331,8 +333,17 @@ CLASS <lcl_rental> IMPLEMENTATION.
 ENDCLASS.
 
 *************** START-OF-SELECTION ****************
-DATA <go_rental> TYPE REF TO <lcl_rental>.
+DATA:
+  <go_rental>  TYPE REF TO <lcl_rental>,
+  <go_partner> TYPE REF TO <if_partner>.
 
 CREATE OBJECT <go_rental>.
+
+*************** 인터페이스 업캐스트 ****************
+<go_partner> = <go_rental>.        " Up-Cast (클래스 → 인터페이스)
+
+*************** 호출 ****************
+<go_partner>-><display_partner>( ).   " 인터페이스 기준 호출
+" 또는
 <go_rental>-><display_partner1>( ).   " ALIAS로 간단 호출
 ```
