Update 4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md

--- a/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
+++ b/ABAP 심화/4-3. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.16).md
@@ -306,6 +306,8 @@ ENDMETHOD.
 - 외부 호출 시 가독성↑, 인터페이스 구조는 그대로 유지
 - 인터페이스 참조 변수로 객체를 받는 것 = 인터페이스 업캐스트
 - 업캐스트 시 인터페이스에 정의된 메서드/속성만 접근 가능
+- 인터페이스 참조 변수로 서로 다른 클래스 객체를 동일하게 처리
+- 호출은 인터페이스 기준, 실행은 각 클래스 구현 메서드로 동작(다형성)
 ```abap
 *************** 인터페이스 정의 ****************
 INTERFACE <if_partner>.
@@ -340,10 +342,45 @@ DATA:
 CREATE OBJECT <go_rental>.
 
 *************** 인터페이스 업캐스트 ****************
-<go_partner> = <go_rental>.        " Up-Cast (클래스 → 인터페이스)
+<go_partner> = <go_rental>.        " 클래스 → 인터페이스 Up-Cast
 
 *************** 호출 ****************
-<go_partner>-><display_partner>( ).   " 인터페이스 기준 호출
+<go_partner>-><display_partner>( ).    " 인터페이스 기준 호출
 " 또는
-<go_rental>-><display_partner1>( ).   " ALIAS로 간단 호출
+<go_rental>-><display_partner1>( ).    " ALIAS로 간단 호출
+
+
+***************************************************************
+* Figure 90: 인터페이스 참조 기반 다형성 (Generic Access)
+***************************************************************
+
+*************** 파트너 목록을 인터페이스로 공통 처리 ****************
+METHOD display_agency_partners.
+
+  DATA lo_partner TYPE REF TO <if_partner>.   " 인터페이스 참조
+
+  LOOP AT mt_partners INTO lo_partner.
+    lo_partner-><display_partner>( ).        " 인터페이스 기준 호출
+  ENDLOOP.
+
+ENDMETHOD.
+
+*************** 각 클래스별 인터페이스 구현 ****************
+CLASS <lcl_hotel> IMPLEMENTATION.
+  METHOD <if_partner>~<display_partner>.
+    display_hotel_attributes( ).
+  ENDMETHOD.
+ENDCLASS.
+
+CLASS <lcl_rental> IMPLEMENTATION.
+  METHOD <if_partner>~<display_partner>.
+    display_rental_data( ).
+  ENDMETHOD.
+ENDCLASS.
+
+CLASS <lcl_carrier> IMPLEMENTATION.
+  METHOD <if_partner>~<display_partner>.
+    display_attributes( ).
+  ENDMETHOD.
+ENDCLASS.
 ```
