--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -1,1 +1,20 @@
+## < ANY TABLE 처리 시 필드 심볼 사용 개념 >
 
+```abap
+CLASS-METHODS write_any_table
+  IMPORTING
+    ig_info TYPE SIMPLE
+    it_data TYPE ANY TABLE.
+METHOD write_any_table.
+
+  FIELD-SYMBOLS <ls_line> TYPE ANY.
+
+  LOOP AT it_data ASSIGNING <ls_line>.
+    ...
+  ENDLOOP.
+
+  WRITE / ig_info.
+
+ENDMETHOD.
+
+```
