--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -1,20 +1,36 @@
-## < ANY TABLE 처리 시 필드 심볼 사용 개념 >
+## < FIELD-SYMBOLS & ASSIGN >
+- 변수 값을 복사하지 않고, 메모리를 직접 가리켜서 공유·수정하는 방식
+- FIELD-SYMBOL → 변수 값을 복사 ❌, 메모리 주소를 직접 참조 ⭕
+- ASSIGN → 특정 변수/테이블 라인을 필드심볼에 연결
+- 한쪽 변경 시 원본도 즉시 변경
+</br>
+
+- `ANY` → 어떤 타입이든 가능
+- `SIMPLE` → WRITE·계산 가능한 단순값만
+- `sflight` → 필드 접근 가능 (-carrid 등)
+```abap
+FIELD-SYMBOLS:
+  <fs>          TYPE ANY,       " 타입 모를 때 (제네릭)
+  <fs_data>     TYPE SIMPLE,    " 문자/숫자 같은 단순 타입
+  <fs_sflight>  TYPE sflight.   " 구조가 확실한 경우
+```
+</br>
 
 ```abap
-CLASS-METHODS write_any_table
+*************** Method Definition ****************
+CLASS-METHODS <write_any_table>
   IMPORTING
-    ig_info TYPE SIMPLE
-    it_data TYPE ANY TABLE.
-METHOD write_any_table.
+    <ig_info> TYPE SIMPLE
+    <it_data> TYPE ANY TABLE.
 
+*************** Method Implementation ****************
+METHOD <write_any_table>.
   FIELD-SYMBOLS <ls_line> TYPE ANY.
 
-  LOOP AT it_data ASSIGNING <ls_line>.
+  LOOP AT <it_data> ASSIGNING <ls_line>.
     ...
   ENDLOOP.
 
-  WRITE / ig_info.
-
+  WRITE / <ig_info>.
 ENDMETHOD.
-
 ```
