--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -27,9 +27,16 @@ CLASS-METHODS <write_any_table>
 METHOD <write_any_table>.
   FIELD-SYMBOLS <ls_line> TYPE ANY.
 
+  " LOOP 방식
   LOOP AT <it_data> ASSIGNING <ls_line>.
     ...
   ENDLOOP.
+
+  " ASSIGN 방식 (인덱스 기준)
+  ASSIGN <it_data>[ 1 ] TO <ls_line>.
+  IF sy-subrc = 0.
+    ...
+  ENDIF.
 
   WRITE / <ig_info>.
 ENDMETHOD.
