--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -3,7 +3,7 @@
 - 한쪽 변경 시 원본도 즉시 변경
 </br>
 
-- `ANY` → 어떤 타입이든 가능
+- `ANY / ANY TABLE` → 어떤 타입이든 가능
 - `SIMPLE` → WRITE·계산 가능한 단순값만
 - `sflight` → 필드 접근 가능 (-carrid 등)
 ```abap
