--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -17,27 +17,43 @@ FIELD-SYMBOLS:
 - FIELD-SYMBOL → 변수 값을 복사 ❌, 메모리 주소를 직접 참조 ⭕
 - ASSIGN → 특정 변수/테이블 라인을 필드심볼에 연결
 ```abap
-*************** Method Definition ****************
+*************** LOOP ASSIGNING 방식 ****************
 CLASS-METHODS <write_any_table>
   IMPORTING
     <ig_info> TYPE SIMPLE
     <it_data> TYPE ANY TABLE.
 
-*************** Method Implementation ****************
 METHOD <write_any_table>.
+
   FIELD-SYMBOLS <ls_line> TYPE ANY.
 
-  " LOOP 방식
   LOOP AT <it_data> ASSIGNING <ls_line>.
     ...
   ENDLOOP.
 
-  " ASSIGN 방식 (인덱스 기준)
-  ASSIGN <it_data>[ 1 ] TO <ls_line>.
-  IF sy-subrc = 0.
-    ...
-  ENDIF.
-
   WRITE / <ig_info>.
+
 ENDMETHOD.
+
+
+*************** DIRECT ASSIGN 방식 ****************
+DATA: <gt_scarr>      TYPE TABLE OF <scarr>,
+      <gt_sbook>      TYPE TABLE OF <sbook>,
+      <gv_table_name> TYPE string.
+
+FIELD-SYMBOLS <fs_tab> TYPE ANY TABLE.
+
+CASE <gv_table_name>.
+  WHEN 'SCARR'.
+    ASSIGN <gt_scarr> TO <fs_tab>.
+  WHEN 'SBOOK'.
+    ASSIGN <gt_sbook> TO <fs_tab>.
+ENDCASE.
+
+IF <fs_tab> IS ASSIGNED.
+  SELECT *
+    FROM (<gv_table_name>)
+    UP TO 100 ROWS
+    INTO TABLE <fs_tab>.
+ENDIF.
 ```
