--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -49,8 +49,7 @@ CASE <gv_table_name>.
 ENDCASE.
 
 IF <fs_tab> IS ASSIGNED.
-  SELECT *
-    FROM (<gv_table_name>)
+  SELECT * FROM (<gv_table_name>)
     UP TO 100 ROWS
     INTO TABLE <fs_tab>.
 ENDIF.
