--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -3,14 +3,13 @@
 - 한쪽 변경 시 원본도 즉시 변경
 </br>
 
-- `ANY / ANY TABLE` → 어떤 타입이든 가능
-- `SIMPLE` → WRITE·계산 가능한 단순값만
-- `sflight` → 필드 접근 가능 (-carrid 등)
 ```abap
+FIELD-SYMBOLS <fs>.                      " TYPE ANY와 동일 → 어떤 타입이든 참조 가능 (제네릭)
 FIELD-SYMBOLS:
-  <fs>          TYPE ANY,       " 타입 모를 때 (제네릭)
-  <fs_data>     TYPE SIMPLE,    " 문자/숫자 같은 단순 타입
-  <fs_sflight>  TYPE sflight.   " 구조가 확실한 경우
+  <fs_all>    TYPE ANY,                  " 모든 타입 참조 가능 (구조/단순/테이블 라인 등)
+  <fs_data>   TYPE SIMPLE,               " 문자·숫자 등 단순 타입만 참조 가능 (WRITE/계산용)
+  <fs_flight> TYPE SFLIGHT,              " SFLIGHT 구조 전용 → 필드 접근 가능 (<fs_flight>-carrid)
+  <fs_tab>    TYPE ANY TABLE.            " 내부 테이블 전용 참조 → 테이블 자체를 가리킴
 ```
 </br>
 
