--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -1,5 +1,5 @@
 ## < FIELD-SYMBOLS & ASSIGN >
-- 변수 값을 복사하지 않고, 메모리를 직접 가리켜서 공유·수정하는 방식
+- 변수 값을 복사하지 않고, 메모리를 직접 가리켜서 공유·수정하는 방식 ( `< >` 으로 표시 )
 - 한쪽 변경 시 원본도 즉시 변경
 - `FIELD-SYMBOL` → 변수 값을 복사 ❌, 메모리 주소를 직접 참조 ⭕
 - `ASSIGN` → 특정 변수/테이블 라인을 필드심볼에 연결
