--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -49,3 +49,44 @@ IF <fs_tab> IS ASSIGNED.
     INTO TABLE <fs_tab>.
 ENDIF.
 ```
+```abap
+REPORT ZPROGB03_0038.
+
+*************** DIRECT ASSIGN 방식 ****************
+* Field Symbols 선언문
+FIELD-SYMBOLS <fs>. " TYPE ANY와 동일함
+FIELD-SYMBOLS: <fs_all> TYPE ANY,
+               <fs_data> TYPE SIMPLE,
+               <fs_flight> TYPE SFLIGHT,
+               <fs_tab> TYPE ANY TABLE.
+
+* Assign 특정 변수와 연결하기
+* Assign 하면 변수의 메모리 주소를 바라보게 됨
+
+DATA: lv_text(10) TYPE C VALUE 'Hello'.
+
+ASSIGN lv_text TO <fs>.
+" IS ASSIGNED 구문 말고도, sy-subrc 로 확인 가능
+" ASSIGN 구문 성공 시 0, 실패 시 4 가 들어옴
+IF <fs> IS ASSIGNED.
+  <fs> = 'Symbols~~'. " 직접 변경 가능
+  WRITE: <fs>.
+ENDIF.
+
+*************** LOOP ASSIGNING 방식 ****************
+FIELD-SYMBOLS <gs_flight> TYPE sflight.
+DATA: gt_flight TYPE TABLE OF sflight.
+
+SELECT MANDT CARRID CONNID FLDATE
+  FROM SFLIGHT
+  INTO TABLE gt_flight
+  WHERE CARRID EQ 'AA'
+    AND CONNID EQ '17'.
+
+LOOP AT gt_flight ASSIGNING <gs_flight>.
+  <gs_flight>-connid = '20'.
+  WRITE:/ <gs_flight>-carrid,
+        / <gs_flight>-connid,
+        / <gs_flight>-fldate.
+ENDLOOP.
+```
