--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -86,7 +86,8 @@ SELECT MANDT CARRID CONNID FLDATE
 LOOP AT gt_flight ASSIGNING <gs_flight>.
   <gs_flight>-connid = '20'.
   WRITE:/ <gs_flight>-carrid,
-        / <gs_flight>-connid,
-        / <gs_flight>-fldate.
+          <gs_flight>-connid,
+          <gs_flight>-fldate.
 ENDLOOP.
+cl_demo_output=>display( gt_flight ).
 ```
