--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -83,7 +83,8 @@ SELECT MANDT CARRID CONNID FLDATE
   WHERE CARRID EQ 'AA'
     AND CONNID EQ '17'.
 
-LOOP AT gt_flight ASSIGNING <gs_flight>.
+*LOOP AT gt_flight ASSIGNING <gs_flight>.
+LOOP AT gt_flight ASSIGNING FIELD-SYMBOL(<gs_flight>).
   <gs_flight>-connid = '20'.
   WRITE:/ <gs_flight>-carrid,
           <gs_flight>-connid,
