--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -74,7 +74,7 @@ IF <fs> IS ASSIGNED.
 ENDIF.
 
 *************** LOOP ASSIGNING 방식 ****************
-FIELD-SYMBOLS <gs_flight> TYPE sflight.
+*FIELD-SYMBOLS <gs_flight> TYPE sflight.
 DATA: gt_flight TYPE TABLE OF sflight.
 
 SELECT MANDT CARRID CONNID FLDATE
