--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -1,4 +1,7 @@
-## < FIELD-SYMBOLS & ASSIGN >
+## < FIELD-SYMBOLS >
+</br>
+
+### 1) FIELD-SYMBOLS & ASSIGN
 - 변수 값을 복사하지 않고, 메모리를 직접 가리켜서 공유·수정하는 방식 (`< >` 으로 표시)
 - 한쪽 변경 시 원본도 즉시 변경
 - `FIELD-SYMBOL` → 변수 값을 복사 ❌, 메모리 주소를 직접 참조 ⭕
@@ -92,3 +95,7 @@ LOOP AT gt_flight ASSIGNING FIELD-SYMBOL(<gs_flight>).
 ENDLOOP.
 cl_demo_output=>display( gt_flight ).
 ```
+</br>
+</br>
+
+### 2) FIELD-SYMBOL CASTING (타입 캐스팅)
