--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -99,3 +99,30 @@ cl_demo_output=>display( gt_flight ).
 </br>
 
 ### 2) FIELD-SYMBOL CASTING (타입 캐스팅)
+- `CASTING` → 같은 메모리 값을 다른 타입 구조로 해석
+- 값 변환 ❌ / 해석 방식만 변경
+- FIELD-SYMBOL에 연결할 때 타입을 암시적/명시적으로 지정 가능
+```abap
+*************** 타입 정의 ****************
+TYPES: BEGIN OF <gty_s_date>,
+         year  TYPE n LENGTH 4,
+         month TYPE n LENGTH 2,
+         day   TYPE n LENGTH 2,
+       END OF <gty_s_date>.
+
+*************** 암시적 CASTING ****************
+FIELD-SYMBOLS <fs_date> TYPE <gty_s_date>.
+
+ASSIGN sy-datum TO <fs_date> CASTING.
+WRITE: / <fs_date>-year,
+       / <fs_date>-month,
+       / <fs_date>-day.
+
+*************** 명시적 CASTING ****************
+FIELD-SYMBOLS <fs_any> TYPE ANY.
+
+ASSIGN sy-datum TO <fs_any> CASTING TYPE <gty_s_date>.
+WRITE: / <fs_any>-year,
+       / <fs_any>-month,
+       / <fs_any>-day.
+```
