--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -99,7 +99,7 @@ cl_demo_output=>display( gt_flight ).
 </br>
 
 ### 2) FIELD-SYMBOL CASTING (타입 캐스팅)
-- `CASTING` → 같은 메모리 값을 다른 타입 구조로 해석
+- `CASTING` → 값을 바꾸지 않고, 같은 메모리를 다른 타입 구조로 해석하는 것
 - 값 변환 ❌ / 해석 방식만 변경
 - FIELD-SYMBOL에 연결할 때 타입을 암시적/명시적으로 지정 가능
 ```abap
