--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -126,3 +126,43 @@ WRITE: / <fs_any>-year,
        / <fs_any>-month,
        / <fs_any>-day.
 ```
+```abap
+*************** CASTING (날짜 → 구조 해석) ****************
+TYPES: BEGIN OF ty_date,
+        year TYPE N LENGTH 4,
+        month TYPE N LENGTH 2,
+        dat TYPE N LENGTH 2,
+       END OF ty_date.
+FIELD-SYMBOLS <fs> TYPE ty_date.
+DATA: gv_date TYPE D.
+gv_date = sy-datum.
+
+ASSIGN gv_date TO <fs> CASTING.
+<fs>-year = 2023.
+
+WRITE:/ '시스템 날짜: ', sy-datum,
+      / 'gs_date: ', gv_date.
+
+*************** CASTING (문자열 → 구조 해석) ****************
+TYPES: BEGIN OF ty_user,
+        id(5) TYPE C,
+        name(10) TYPE C,
+       END OF ty_user.
+DATA: gv_data(20) TYPE C VALUE 'C0001HONGGILD'.
+FIELD-SYMBOLS <fs_user> TYPE ANY.
+
+ASSIGN gv_data TO <fs_user> CASTING TYPE ty_user.
+WRITE: gv_data.
+```
+</br>
+</br>
+
+### 3) 
+```abap
+ASSIGN gv_name TO <fs>.     
+" gv_name 변수 자체를 <fs>에 연결 (값/메모리 그대로)
+
+ASSIGN (gv_name) TO <fs>.   
+" gv_name 안에 들어있는 문자열을 변수 이름으로 해석
+" → 그 이름이 가리키는 실제 변수/필드/속성에 동적 연결
+```
