--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -159,10 +159,33 @@ WRITE: gv_data.
 
 ### 3) 
 ```abap
-ASSIGN gv_name TO <fs>.     
-" gv_name 변수 자체를 <fs>에 연결 (값/메모리 그대로)
+*************** Any Data Object (일반 변수) ****************
+gv_name = 'GV_CARRID'.        " 변수명 문자열 (대문자)
+ASSIGN (gv_name) TO <fs>.     " gv_carrid 변수에 동적 연결
 
-ASSIGN (gv_name) TO <fs>.   
-" gv_name 안에 들어있는 문자열을 변수 이름으로 해석
-" → 그 이름이 가리키는 실제 변수/필드/속성에 동적 연결
+*************** Structure Component (전체 이름 사용) ****************
+gv_name = 'GS_SPFLI-CARRID'.  " 구조명-필드명
+ASSIGN (gv_name) TO <fs>.     " 구조 필드에 동적 접근
+
+*************** Static Attribute (클래스 정적 속성) ****************
+gv_name = 'LCL_VEHICLE=>N_O_AIRPLANES'.
+ASSIGN (gv_name) TO <fs>.
+
+*************** Instance Attribute (객체 인스턴스 속성) ****************
+gv_name = 'LO_VEHICLE->N_O_AIRPLANES'.
+ASSIGN (gv_name) TO <fs>.
+
+*************** Structure Component (전체 이름 사용) ****************
+gv_name = 'GS_SPFLI-CARRID'.  " 구조명-필드명
+ASSIGN (gv_name) TO <fs>.     " 구조 필드에 동적 접근
+
+*************** Structure Component (필드명만 사용) ****************
+gv_comp_name = 'CARRID'.
+ASSIGN COMPONENT gv_comp_name
+  OF STRUCTURE gs_spfli TO <fs>.
+
+*************** Structure Component (위치 번호 사용) ****************
+gv_comp_number = 2.
+ASSIGN COMPONENT gv_comp_number
+  OF STRUCTURE gs_spfli TO <fs>.
 ```
