--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -157,7 +157,9 @@ WRITE: gv_data.
 </br>
 </br>
 
-### 3) 
+### 3) Dynamic ASSIGN을 이용한 데이터·구조·속성 접근 방식
+- `ASSIGN (변수)` 는 문자열로 된 이름을 실제 데이터 객체로 해석해 필드심볼`(<fs>)` 에 연결
+- Structure 필드는 전체 이름 / 필드명 / 위치 번호로 접근할 수 있음
 ```abap
 *************** Any Data Object (일반 변수) ****************
 gv_name = 'GV_CARRID'.        " 변수명 문자열 (대문자)
@@ -188,4 +190,40 @@ ASSIGN COMPONENT gv_comp_name
 gv_comp_number = 2.
 ASSIGN COMPONENT gv_comp_number
   OF STRUCTURE gs_spfli TO <fs>.
+```
+</br>
+</br>
+
+### 4) New Open SQL 인라인 선언 형식 (@DATA 사용)
+- `DATA(변수)` → SELECT 문 안에서 변수 즉시 선언(인라인 선언)
+- `@` → DB 컬럼이 아니라, ABAP 변수라는 걸 알려주기 위해 붙임
+```abap
+SELECT SINGLE *
+  FROM <DB_TABLE>
+  INTO @DATA(<ABAP_VARIABLE>)   " @ : ABAP 변수 표시 / DATA() : 즉시 선언 형식
+  WHERE <DB_FIELD> = <VALUE>
+    AND <DB_FIELD> = <VALUE>.
+```
+```abap
+*************** New Open SQL (@DATA 인라인 선언) ****************
+FIELD-SYMBOLS <fs> TYPE SIMPLE.
+
+SELECT SINGLE *
+  FROM spfli
+  INTO @DATA(gs_spfli)     
+  WHERE carrid = 'AA'
+    AND connid = '17'.
+
+*************** Structure Component 순차 접근 (위치 기반) ****************
+DO.
+  " gs_spfli 스트럭처의 각 Component 위치를 sy-index로 접근해서
+  " Field symbol과 연결함
+  ASSIGN COMPONENT sy-index OF STRUCTURE gs_spfli TO <fs>.
+  IF sy-subrc <> 0. " 만약 ASSIGN에 성공하면 0이 들어옴
+    EXIT.
+  ENDIF.
+  IF <fs> IS ASSIGNED.
+    WRITE: <fs>.
+  ENDIF.
+ENDDO.
 ```
