--- a/RAP 과정/1.30.md
+++ b/RAP 과정/1.30.md
@@ -197,6 +197,7 @@ ASSIGN COMPONENT gv_comp_number
 ### 4) New Open SQL 인라인 선언 형식 (@DATA 사용)
 - `DATA(변수)` → SELECT 문 안에서 변수 즉시 선언(인라인 선언)
 - `@` → DB 컬럼이 아니라, ABAP 변수라는 걸 알려주기 위해 붙임
+- `UNASSIGN` → 필드심볼이 가리키던 메모리 참조를 해제하는 명령
 ```abap
 SELECT SINGLE *
   FROM <DB_TABLE>
@@ -220,6 +221,7 @@ DO.
   " Field symbol과 연결함
   ASSIGN COMPONENT sy-index OF STRUCTURE gs_spfli TO <fs>.
   IF sy-subrc <> 0. " 만약 ASSIGN에 성공하면 0이 들어옴
+    UNASSIGN <fs>. " <fs> 연결 해제
     EXIT.
   ENDIF.
   IF <fs> IS ASSIGNED.
