Update 6-1. ABAP 추가 내용(1.30).md

--- a/ABAP 심화/6-1. ABAP 추가 내용(1.30).md
+++ b/ABAP 심화/6-1. ABAP 추가 내용(1.30).md
@@ -182,7 +182,7 @@ WRITE: gv_data.
 gv_name = 'GV_CARRID'.        " 변수명 문자열 (대문자)
 ASSIGN (gv_name) TO <fs>.     " gv_carrid 변수에 동적 연결
 
-*************** Structure Component (전체 이름 사용) ****************
+*************** Structure Component (스트럭처 필드) ****************
 gv_name = 'GS_SPFLI-CARRID'.  " 구조명-필드명
 ASSIGN (gv_name) TO <fs>.     " 구조 필드에 동적 접근
 
@@ -193,10 +193,6 @@ ASSIGN (gv_name) TO <fs>.
 *************** Instance Attribute (객체 인스턴스 속성) ****************
 gv_name = 'LO_VEHICLE->N_O_AIRPLANES'.
 ASSIGN (gv_name) TO <fs>.
-
-*************** Structure Component (전체 이름 사용) ****************
-gv_name = 'GS_SPFLI-CARRID'.  " 구조명-필드명
-ASSIGN (gv_name) TO <fs>.     " 구조 필드에 동적 접근
 
 *************** Structure Component (필드명만 사용) ****************
 gv_comp_name = 'CARRID'.
