Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -10,6 +10,28 @@
 
 </br>
 
-## < ABAP 개념 >
+## < ABAP Expressions(표현식) 기본 개념 정리 >
 </br>
 
+### 1) replace
+- 문자열에서 지정한 부분(sub)을 다른 문자열(with)로 바꾼 새 문자열을 반환하는 문자열 처리 함수
+```abap
+RESULT = replace(
+           val  = <원본문자열>
+           sub  = <찾을문자열>
+           with = <바꿀문자열>
+         ).
+```
+</br>
+
+### 2) 문자열 연결 (Concatenation)
+- 여러 문자열을 하나로 이어서 새 문자열을 만듦
+```abap
+" 기존 방식
+CONCATENATE gv_var1 gv_var2
+  INTO gv_result
+  SEPARATED BY <sep>.
+
+" 최신 방식
+gv_result = gv_var1 && gv_var2.
+```
