Update 1-1. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-1. 프로그래밍 코드 최적화(02.02).md
@@ -35,3 +35,17 @@ CONCATENATE gv_var1 gv_var2
 " 최신 방식
 gv_result = gv_var1 && gv_var2.
 ```
+</br>
+
+### 3) 문자열 템플릿 (String Templates)
+- 문자열 안에 변수나 표현식을 직접 삽입해 새 문자열을 만듦
+```abap
+" 기존 방식
+DATA gv_string TYPE string.
+gv_string = |Hello World|.
+
+" 최신 방식
+DATA gv_string TYPE string.
+PARAMETERS pa_name TYPE string.
+gv_string = |Hello { pa_name }|.
+```
